[layout] add viewer count

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,6 +48,7 @@
 
       </section>
       <footer>
+        <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=m&d=gXBk_PkE3yBSNgIn_ztsWevROB6f1nQsng1c5uadZS8'></script>
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
