--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,10 +24,10 @@
 
         <p>
           <i class="fas fa-fw fa-envelope" aria-hidden="true"></i> {{ site.author.email }}<br>
-          <a href="{{ site.author.googlescholar }}"><i class="fas fa-fw fa-graduation-cap"></i> Google Scholar</a><br>
-          <a href="https://github.com/{{ site.author.github }}"><i class="fab fa-fw fa-github" aria-hidden="true"></i> Github</a><br>
-          <a href="https://www.linkedin.com/in/{{ site.author.linkedin }}"><i class="fab fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a><br>
-          <a href="../misc/CV_Yifan_Yang.pdf"><i class="fas fa-fw fa-file"></i> Curriculum Vitae</a>
+          <i class="fas fa-fw fa-graduation-cap"></i><a href="{{ site.author.googlescholar }}"> Google Scholar</a><br>
+          <i class="fab fa-fw fa-github" aria-hidden="true"></i><a href="https://github.com/{{ site.author.github }}"> Github</a><br>
+          <i class="fab fa-fw fa-linkedin" aria-hidden="true"></i><a href="https://www.linkedin.com/in/{{ site.author.linkedin }}"> LinkedIn</a><br>
+          <i class="fas fa-fw fa-file"></i><a href="../misc/CV_Yifan_Yang.pdf"> Curriculum Vitae</a>
         </p>
 
         {% if site.github.is_project_page %}
