--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-@import "{{ site.theme }}";
+@import "jekyll-theme-minimal";
 
 @import "vendor/font-awesome/fontawesome";
 @import "vendor/font-awesome/solid";
