--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -1,11 +1,10 @@
 @import "fonts";
 @import "rouge-github";
-@import "colors";
 
 body {
   background-color: var(--clr-bg);
   padding:50px;
-  font: 15px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: var(--clr-text);
   font-weight:400;
 }
@@ -24,7 +23,7 @@ h1, h2, h3 {
 }
 
 h1 {
-  font-size:32px;
+  font-size:28px;
 }
 
 h2 {
@@ -42,6 +41,7 @@ a {
 
 a:hover, a:focus {
   color: var(--clr-a-text-hvr);
+  font-weight: bold;
 }
 
 a small {
@@ -55,29 +55,9 @@ a:hover small {
   color:var(--clr-small-in-a);
 }
 
-// added
-p.link {
-  margin:0 0 4px;
-}
-
-// added
-ul.link {
-  list-style-type: none; /* Remove bullets */
-  margin: 0; /* To remove default bottom margin */ 
-  padding: 0.4px; /* To remove default left padding */
-}
-
-ul.link li + li {
-  margin-top: 6px;
-}
-
-ul.link:last-child {
-  margin-bottom: 6px;
-}
-
 .wrapper {
   width:860px;
-  margin: 0 auto;
+  margin:0 auto;
 }
 
 blockquote {
@@ -138,34 +118,55 @@ kbd {
   vertical-align: middle;
 }
 
-.sidebar {
-  width:185px;
+header {
+  width:270px;
   float:left;
   position:fixed;
   -webkit-font-smoothing:subpixel-antialiased;
-  top: 0;
-  padding: 58px 0 50px 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: calc(100vh - 108px);
-  overflow-x: hidden;
-  overflow-y: scroll;
-  -ms-overflow-style: -ms-autohiding-scrollbar; // IE10+
 }
 
-// Disables the scrollbar in Firefox
-// HTML-Proofer fails without "@-moz-document url-prefix()"
-// because scrollbar-width is still experimental in Firefox.
-@-moz-document url-prefix() {
-  .sidebar {
-    scrollbar-width: none;
-  }
+ul.downloads {
+  list-style:none;
+  height:40px;
+  padding:0;
+  background: var(--clr-buttons-main-bg);
+  border-radius:5px;
+  border:1px solid var(--clr-buttons-main-border);
+  width:270px;
 }
 
-.sidebar::-webkit-scrollbar {
-  /* Chrome, Safari, Edge */
-  display: none;
+.downloads li {
+  width:89px;
+  float:left;
+  border-right:1px solid var(--clr-buttons-main-border);
+  height:40px;
+}
+
+.downloads li:first-child a {
+  border-radius:5px 0 0 5px;
+}
+
+.downloads li:last-child a {
+  border-radius:0 5px 5px 0;
+}
+
+.downloads a {
+  line-height:1;
+  font-size:11px;
+  color:var(--clr-buttons-main-text);
+  display:block;
+  text-align:center;
+  padding-top:6px;
+  height:34px;
+}
+
+.downloads a:hover, .downloads a:focus {
+  color: var(--clr-buttons-main-text-hover);
+  font-weight:bold;
+}
+
+.downloads ul a:active {
+  background-color:#f0f0f0;
 }
 
 strong {
@@ -173,10 +174,21 @@ strong {
   font-weight:700;
 }
 
+.downloads li + li + li {
+  border-right:none;
+  width:89px;
+}
+
+.downloads a strong {
+  font-size:14px;
+  display:block;
+  color:var(--clr-h1-and-bold);
+}
+
 section {
-  width: 610px;
+  width:500px;
   float:right;
-  padding-bottom:30px;
+  padding-bottom:50px;
 }
 
 small {
@@ -187,48 +199,25 @@ hr {
   border:0;
   background:var(--clr-splitter-blockquote-and-section);
   height:1px;
-  width:30%;
-  margin:10px auto 30px;
-}
-
-footer, .sidebar-footer {
-  width:185px;
-  float:left;
-  bottom:30px;
-  -webkit-font-smoothing:subpixel-antialiased;
+  margin:0 0 20px;
 }
 
 footer {
-  display: none;
-}
-
-.sidebar-footer {
-  flex-basis: content;
+  width:270px;
+  float:left;
+  position:fixed;
+  bottom:50px;
+  -webkit-font-smoothing:subpixel-antialiased;
 }
 
 @media print, screen and (max-width: 960px) {
-
-  .sidebar {
-    padding: initial;
-    display: initial;
-    height: initial;
-    overflow: initial;    
-  }
-
-  footer {
-    display: initial;
-  }
-
-  .sidebar-footer {
-    display: none;
-  }
 
   div.wrapper {
     width:auto;
     margin:0;
   }
 
-  .sidebar, section, footer {
+  header, section, footer {
     float:none;
     position:static;
     width:auto;
@@ -254,14 +243,6 @@ footer {
     right:50px;
     top:52px;
   }
-  
-  .link-wrapper {
-    display: none !important;
-  }
-
-  .img-circle {
-    display: none !important;
-  }
 }
 
 @media print, screen and (max-width: 720px) {
@@ -282,28 +263,18 @@ footer {
   }
 }
 
-.link-wrapper-mobile {
-  margin-bottom: 20px;
-}
-
-@media print, screen and (min-width: 961px) {
-  .link-wrapper-mobile {
-    display: none !important;
-  }
-}
-
 @media print, screen and (max-width: 480px) {
   body {
     padding:15px;
   }
 
-  // header ul {
-  //   width:99%;
-  // }
+  .downloads {
+    width:99%;
+  }
 
-  // header li, header ul li + li + li {
-  //   width:33%;
-  // }
+  .downloads li, .downloads li + li + li {
+    width:33%;
+  }
 }
 
 @media print {
@@ -313,4 +284,3 @@ footer {
     color:#444;
   }
 }
-
