--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,7 @@
 
       </section>
       <footer>
-        <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=n&d=0UDjgG7gErBe3gForwyKxVD0dW8YNx8H0WHKWL_sAKU&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
+        <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=0UDjgG7gErBe3gForwyKxVD0dW8YNx8H0WHKWL_sAKU"></script>
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
