--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,23 @@
       section {
         width: calc(100% - 300px);
       }
+      .header-content {
+        display: flex;
+        align-items: center;
+        gap: 15px;
+        margin-bottom: 20px;
+      }
+      .header-content h1 {
+        margin: 0;
+      }
+      .header-content img {
+        width: 80px;
+        height: 80px;
+        object-fit: cover;
+      }
+      .contact-info {
+        margin-top: 20px;
+      }
       @media print, screen and (max-width: 960px) {
         .wrapper {
           width: auto;
@@ -39,27 +56,33 @@
           position: static;
           width: auto;
         }
+        .header-content {
+          justify-content: center;
+        }
       }
     </style>
   </head>
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-        
-        {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" width=65% height=auto />
-        {% endif %}
+        <div class="header-content">
+          {% if site.logo %}
+            <img src="{{site.logo | relative_url}}" alt="Logo" />
+          {% endif %}
+          <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        </div>
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <p>
-          <i class="fas fa-fw fa-envelope" aria-hidden="true"></i> {{ site.author.email }}<br>
-          <i class="fas fa-fw fa-graduation-cap"></i><a href="{{ site.author.googlescholar }}"> Google Scholar</a><br>
-          <i class="fab fa-fw fa-github" aria-hidden="true"></i><a href="https://github.com/{{ site.author.github }}"> Github</a><br>
-          <i class="fab fa-fw fa-linkedin" aria-hidden="true"></i><a href="https://www.linkedin.com/in/{{ site.author.linkedin }}"> LinkedIn</a><br>
-          <i class="fab fa-fw fa-twitter" aria-hidden="true"></i><a href="https://twitter.com/{{ site.author.twitter }}"> Twitter</a><br>
-        </p>
+        <div class="contact-info">
+          <p>
+            <i class="fas fa-fw fa-envelope" aria-hidden="true"></i> {{ site.author.email }}<br>
+            <i class="fas fa-fw fa-graduation-cap"></i><a href="{{ site.author.googlescholar }}"> Google Scholar</a><br>
+            <i class="fab fa-fw fa-github" aria-hidden="true"></i><a href="https://github.com/{{ site.author.github }}"> Github</a><br>
+            <i class="fab fa-fw fa-linkedin" aria-hidden="true"></i><a href="https://www.linkedin.com/in/{{ site.author.linkedin }}"> LinkedIn</a><br>
+            <i class="fab fa-fw fa-twitter" aria-hidden="true"></i><a href="https://twitter.com/{{ site.author.twitter }}"> Twitter</a><br>
+          </p>
+        </div>
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
