--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,11 +48,9 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" width=80% height=auto />
+          <img src="{{site.logo | relative_url}}" alt="Logo" width=85% height=auto />
         {% endif %}
-
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
-
+        <!-- <p>{{ site.description | default: site.github.project_tagline }}</p> -->
         <p>
           <i class="fas fa-fw fa-envelope" aria-hidden="true"></i> {{ site.author.email }}<br>
           <i class="fas fa-fw fa-graduation-cap"></i><a href="{{ site.author.googlescholar }}"> Google Scholar</a><br>
