--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,6 +87,9 @@
 
       </section>
       <footer>
+        {% if page.path and page.path contains 'articles/' %}
+        <p><a href="https://zguo0525.github.io/">&larr; Home</a></p>
+        {% endif %}
         <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=0UDjgG7gErBe3gForwyKxVD0dW8YNx8H0WHKWL_sAKU"></script>
       </footer>
     </div>
