Fix author email format in layout and configuration for consistency and improved accessibility.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
         {% endif %}
         <!-- <p>{{ site.description | default: site.github.project_tagline }}</p> -->
         <p>
-          <i class="fas fa-fw fa-envelope" aria-hidden="true"></i> <a href="mailto:{{ site.author.email | replace: ' AT ', '@' }}">{{ site.author.email }}</a><br>
+          <i class="fas fa-fw fa-envelope" aria-hidden="true"></i> <a href="mailto:{{ site.author.email }}">{{ site.author.email }}</a><br>
           <i class="fas fa-fw fa-graduation-cap"></i><a href="{{ site.author.googlescholar }}"> Google Scholar</a><br>
           <i class="fab fa-fw fa-github" aria-hidden="true"></i><a href="https://github.com/{{ site.author.github }}"> Github</a><br>
           <i class="fab fa-fw fa-linkedin" aria-hidden="true"></i><a href="https://www.linkedin.com/in/{{ site.author.linkedin }}"> LinkedIn</a><br>
