--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,6 +81,9 @@
 
       {% if page.path and page.path contains 'articles/' %}
         <p><a href="https://zguo0525.github.io/">&larr; Home</a></p>
+        <div style="margin-bottom: 1em; color: #666; font-size: 0.9em;">
+          <span>👁️ <span id="article-view-count">0</span> views</span>
+        </div>
       {% endif %}
 
       {{ content }}
@@ -107,6 +110,9 @@
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+    {% if page.path and page.path contains 'articles/' %}
+    <script src="{{ "/assets/js/article-views.js" | relative_url }}"></script>
+    {% endif %}
     {% if site.google_analytics %}
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -117,5 +123,9 @@
       ga('send', 'pageview');
     </script>
     {% endif %}
+    
+    <!-- GoatCounter for view tracking -->
+    <script data-goatcounter="https://zguo0525.goatcounter.com/count"
+            async src="//gc.zgo.at/count.js"></script>
   </body>
 </html>
